--- a/app/src/main/res/layout/activity_detection.xml
+++ b/app/src/main/res/layout/activity_detection.xml
@@ -10,6 +10,10 @@
         android:id="@+id/lv_activity_detection"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:divider="@android:color/transparent"
+        android:scrollbars="none"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0"
         app:layout_constraintBottom_toTopOf="@id/barrier_activity_detection"/>
 
     <ImageView
