--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,14 @@
 <resources>
     <dimen name="dp_48">48dp</dimen>
     <dimen name="dp_40">40dp</dimen>
+    <dimen name="dp_32">32dp</dimen>
+    <dimen name="dp_24">24dp</dimen>
+    <dimen name="dp_12">12dp</dimen>
     <dimen name="dp_8">8dp</dimen>
+    <dimen name="dp_6">6dp</dimen>
     <dimen name="dp_4">4dp</dimen>
+    <dimen name="dp_2">2dp</dimen>
+    <dimen name="sp_16">16sp</dimen>
+    <dimen name="dp_120">120dp</dimen>
+    <dimen name="px_1">1px</dimen>
 </resources>
