--- a/app/src/main/res/layout/activity_detection.xml
+++ b/app/src/main/res/layout/activity_detection.xml
@@ -24,31 +24,18 @@
     </android.support.v4.widget.SwipeRefreshLayout>
 
     <ImageView
-        android:id="@+id/iv_activity_detection_check"
-        android:layout_width="0dp"
-        android:layout_height="@dimen/dp_48"
-        android:padding="@dimen/dp_8"
-        android:src="@android:drawable/checkbox_on_background"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_chainStyle="packed"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/iv_activity_detection_run" />
-
-    <ImageView
         android:id="@+id/iv_activity_detection_run"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="@dimen/dp_48"
         android:padding="@dimen/dp_8"
         android:src="@android:drawable/ic_media_play"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/iv_activity_detection_check"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
     <android.support.constraint.Barrier
         android:id="@+id/barrier_activity_detection"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:barrierDirection="top"
-        app:constraint_referenced_ids="iv_activity_detection_check,iv_activity_detection_run" />
+        app:constraint_referenced_ids="iv_activity_detection_run" />
 
 </android.support.constraint.ConstraintLayout>
