--- a/app/src/main/res/layout/layout_item_detection.xml
+++ b/app/src/main/res/layout/layout_item_detection.xml
@@ -2,18 +2,19 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/shape_item_detection_bg_init"
     android:padding="@dimen/dp_4">
 
     <TextView
         android:id="@+id/tv_layout_item_detection_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:paddingBottom="@dimen/dp_8"
         android:paddingLeft="@dimen/dp_8"
         android:paddingRight="@dimen/dp_8"
         android:paddingTop="@dimen/dp_8"
-        android:paddingBottom="@dimen/dp_8"
-        android:textSize="@dimen/sp_16"
-        android:gravity="center_vertical"
-        android:text="@string/app_name" />
+        android:text="@string/app_name"
+        android:textSize="@dimen/sp_16" />
 
 </android.support.constraint.ConstraintLayout>
