--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorWhite">#dddddd</color>
     <color name="colorGay">#444444</color>
+    <color name="colorGreen">#009688</color>
+    <color name="colorOrange">#E64A19</color>
 </resources>
