--- a/app/src/main/res/layout/activity_detection.xml
+++ b/app/src/main/res/layout/activity_detection.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".DetectionActivity">
@@ -9,33 +10,34 @@
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/srl_activity_detection"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@id/barrier_activity_detection"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0">
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        app:layout_constraintBottom_toTopOf="@id/iv_activity_detection_run"
+        app:layout_constraintTop_toTopOf="parent">
 
         <ListView
             android:id="@+id/lv_activity_detection"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:divider="@android:color/transparent"
+            android:layout_height="match_parent"
+            android:divider="@android:color/darker_gray"
+            android:dividerHeight="@dimen/px_1"
             android:scrollbars="none" />
 
     </android.support.v4.widget.SwipeRefreshLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/px_1"
+        android:background="@color/colorGay"/>
 
     <ImageView
         android:id="@+id/iv_activity_detection_run"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_48"
+        android:background="@color/colorWhite"
         android:padding="@dimen/dp_8"
         android:src="@android:drawable/ic_media_play"
+        app:layout_constraintTop_toBottomOf="@id/srl_activity_detection"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
-    <android.support.constraint.Barrier
-        android:id="@+id/barrier_activity_detection"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:barrierDirection="top"
-        app:constraint_referenced_ids="iv_activity_detection_run" />
-
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
