--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,7 @@
     <color name="colorWhite">#dddddd</color>
     <color name="colorGay">#444444</color>
     <color name="colorGreen">#009688</color>
+    <color name="colorYellow">#FFC107</color>
     <color name="colorOrange">#E64A19</color>
+    <color name="colorRed">#F44336</color>
 </resources>
