添加删除确认，双击退出

--- a/app/src/main/res/drawable/shape_item_detection_bg_ok.xml
+++ b/app/src/main/res/drawable/shape_item_detection_bg_ok.xml
@@ -9,5 +9,5 @@
         android:width="@dimen/px_1"
         android:color="@color/colorWhite" />
 
-    <solid android:color="@color/colorGreen" />
+    <solid android:color="@color/colorIndigo" />
 </shape>
