--- a/app/src/main/res/drawable/shape_item_detection_bg_init.xml
+++ b/app/src/main/res/drawable/shape_item_detection_bg_init.xml
@@ -9,6 +9,6 @@
         android:width="@dimen/px_1"
         android:color="@color/colorWhite" />
 
-    <solid android:color="@color/colorWhite" />
+    <solid android:color="@color/colorAccent" />
 
 </shape>
