--- a/app/src/main/res/layout/layout_item_detection.xml
+++ b/app/src/main/res/layout/layout_item_detection.xml
@@ -15,6 +15,7 @@
         android:paddingRight="@dimen/dp_8"
         android:paddingTop="@dimen/dp_8"
         android:text="@string/app_name"
+        android:textColor="@color/colorWhite"
         android:textSize="@dimen/sp_16" />
 
     <LinearLayout
@@ -33,7 +34,7 @@
             android:layout_width="0dp"
             android:layout_height="@dimen/dp_64"
             android:layout_weight="3"
-            android:background="@color/colorYellow"
+            android:background="@color/colorGreen"
             android:gravity="center"
             android:text="@string/edit"
             android:textColor="@color/colorWhite"
@@ -44,7 +45,7 @@
             android:layout_width="0dp"
             android:layout_height="@dimen/dp_64"
             android:layout_weight="3"
-            android:background="@color/colorRed"
+            android:background="@color/colorAmber"
             android:gravity="center"
             android:text="@string/delete"
             android:textColor="@color/colorWhite"
