--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#212121</color>
+    <color name="colorPrimaryDark">#212121</color>
+    <color name="colorAccent">#757575</color>
     <color name="colorWhite">#dddddd</color>
     <color name="colorGay">#444444</color>
-    <color name="colorGreen">#009688</color>
-    <color name="colorYellow">#FFC107</color>
+    <color name="colorIndigo">#00796B</color>
+    <color name="colorGreen">#689F38</color>
     <color name="colorOrange">#E64A19</color>
-    <color name="colorRed">#F44336</color>
+    <color name="colorAmber">#FFA000</color>
 </resources>
