--- a/app/src/main/res/layout/activity_detection.xml
+++ b/app/src/main/res/layout/activity_detection.xml
@@ -36,7 +36,7 @@
         android:layout_height="@dimen/dp_48"
         android:background="@color/colorWhite"
         android:padding="@dimen/dp_8"
-        android:src="@android:drawable/ic_media_play"
+        android:src="@drawable/ic_start"
         app:layout_constraintTop_toBottomOf="@id/srl_activity_detection"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
